kubernetes/hassio/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hassio
spec:
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
  selector:
    app: hassio
